Update api and slot end point
